<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/postID"
            android:layout_width="match_parent"
            android:layout_height="112dp"/>

        <Button
            android:id="@+id/likeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/like"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/commentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/com"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ShareID"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/shre"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v7.widget.CardView>